fix: add more spacing for articles on index page

--- a/resources/public/css/blog.css
+++ b/resources/public/css/blog.css
@@ -59,6 +59,11 @@ code {
 
 #index li {
     font: large Helvetica,Arial,sans-serif;
+    margin: 1.5em 0;
+}
+
+#index li p {
+    margin: 0;
 }
 
 /* blog post text */
